Fix spacing problems with Help icons.  Need to clear browser cache to implement changes.
git-svn-id: svn://svn.webtrees.net/trunk@2778 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/cloudy/style.css
+++ b/phpGedView/themes/cloudy/style.css
@@ -784,10 +784,9 @@ th {
 	padding: 5px;
 }
 
-.icon {
+.icon, .adminicon {
 	border: none;
-	padding-top: 1pt;
-	padding-left: 3pt;
+	padding-left: 0pt;
 	padding-right: 5pt;
 }
 
