--- a/phpGedView/themes/cloudy/style_rtl.css
+++ b/phpGedView/themes/cloudy/style_rtl.css
@@ -54,3 +54,9 @@ html {
 .door dd {
 	float: right;
 }
+
+.icon, .adminicon {
+	border: none;
+	padding-left: 5pt;
+	padding-right: 0pt;
+}
