--- a/phpGedView/themes/standard/style.css
+++ b/phpGedView/themes/standard/style.css
@@ -5,7 +5,7 @@
  * To learn more about CSS visit http: //www.w3.org/TR/REC-CSS2/
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2007 John Finlay and Others
+ * Copyright (C) 2002 to 2008 John Finlay and Others
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -402,8 +402,10 @@ a:hover .nameZoom {
 	padding: 3px;
 }
 
-.icon {
+.icon, .adminicon {
 	border: none;
+	padding-left: 0pt;
+	padding-right: 5pt;
 }
 
 .link {
